--- a/src/scaled_storage/Cargo.toml
+++ b/src/scaled_storage/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "scaled_storage"
 version = "0.1.0"
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+path = "lib.rs"
 
 [dependencies]
-candid = "0.7.4"
-ic-cdk = "0.4"
-ic-cdk-macros = "0.4"
+anchorhash = "0.2.1"
+highway = "0.8.0"
+ic-cdk = "0.3"
+serde = "1.0"
+ic-kit = "0.4.4"
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+async-std = { version="1.10.0", features = ["attributes"] }
