--- a/src/scaled_storage/Cargo.toml
+++ b/src/scaled_storage/Cargo.toml
@@ -9,9 +9,12 @@ path = "lib.rs"
 [dependencies]
 anchorhash = "0.2.1"
 highway = "0.8.0"
-ic-cdk = "0.3"
 serde = "1.0"
 ic-kit = "0.4.4"
+serde_bytes = "0.11.5"
+ic-cdk = "0.5.0"
+candid = "0.7.4"
+futures = "0.3.21"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-std = { version="1.10.0", features = ["attributes"] }
