--- a/src/scaled_storage_example_1/Cargo.toml
+++ b/src/scaled_storage_example_1/Cargo.toml
@@ -14,3 +14,6 @@ ic-cdk = "0.4"
 ic-cdk-macros = "0.4"
 scaled_storage = {path = "../scaled_storage"}
 ic-kit = "0.4.4"
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+async-std = { version="1.10.0", features = ["attributes"] }
