--- a/src/scaled_storage/Cargo.toml
+++ b/src/scaled_storage/Cargo.toml
@@ -15,6 +15,7 @@ serde_bytes = "0.11.5"
 ic-cdk = "0.5.0"
 candid = "0.7.4"
 futures = "0.3.21"
+read-byte-slice = "0.1.2"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-std = { version="1.10.0", features = ["attributes"] }
