created stress test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,6 @@
 members = [
     "src/scaled_storage_example_1",
     "src/scaled_storage",
-    "src/wasm_uploader"
+    "src/wasm_uploader",
+    "src/stress_test"
 ]
