--- a/src/scaled_storage/Cargo.toml
+++ b/src/scaled_storage/Cargo.toml
@@ -2,6 +2,9 @@
 name = "scaled_storage"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "DHT Solution for the Internet Computer"
+repository = "https://github.com/scroobius-pip/scaled_storage"
 
 [lib]
 path = "lib.rs"
